fix(post): font size would bug out with overflowing title

--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -8,7 +8,7 @@
 }
 
 .titleBox {
-  font-size: larger;
+  font-size: 12px;
   color: var(--text);
   margin-bottom: 12px;
 }
@@ -140,7 +140,6 @@ a {
   margin: 0;
   padding: 5px;
   border: 1px solid var(--border-text);
-  font-size: larger;
   list-style: none;
 }
 
